--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
 	hi guys. this is a webpage
 	inside the steel-beans
 	github repository.
+	<button id="the-button">
+the button
+
+	</button>
 	
 
 
 
+	<script>
+let x = 4;
+		document.write(x);
 
+
+	</script>
 
 
 
