--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
 
+	<head>
+		<style>
 
+
+		</style>
+	</head>
 
 	hi guys. this is a webpage
 	inside the steel-beans
@@ -16,11 +21,13 @@ the button
 	<script>
 let x = 4;
 		document.write(x);
+</script>
 
-
-	</script>
-
-
-
+Charts for all songs:
+<ul>
+  <li><a href="charts/halfstep-trills.html">halfstep trills</a></li>
+  <li><a href="charts/halfstep-trills.html">halfstep trills</a></li>
+  <li><a href="charts/halfstep-trills.html">halfstep trills</a></li>
+</ul>
 
 </html>
