--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<html>
-
-	<head>
-		<style>
-
+<html><head><style>
+*{
+  font-size: 16px;
+  color: #126794;
+  background-color: #fafbfe;
 
 		</style>
 	</head>
