--- a/index.html
+++ b/index.html
@@ -26,126 +26,235 @@ Here I will add charts for all songs:
 </div>
 
 
-
+<br>
 
 ----------
+<br>
 ---------
+<br>
 -------
-
+<br>i
+<br>
+<br>
+<br>
 
 
 
 steel beans...
+<br>
 greatest band...
+<br>
 to ever poo...
+<br>
 coming to a bar...
+<br>
 or pawnshop near yoo
+<br>
 ------------
+<br>
+<br>
 
 
 
 .............setlist for 7/30 and 7/31
 
+<br>
 Moonchild*
+<br>
 Halfstep trills
+<br>
 The jester
+<br>
 Wild card
+<br>
 Circles
+<br>
 Grayscale
+<br>
 
+<br>
 Glass castles
+<br>
 Shadow dance
+<br>
 Silly clone
+<br>
 
+<br>
 Keep me Hangin On*
+<br>
 Little haze
+<br>
 
+<br>
 Long way down
+<br>
 ........................... . .. . . . . .
+<br>
+<br>
+<br>
 
 
 
 
 
 ........shetlist for saidfest
+<br>
 similar shirt      A
+<br>
 halfstep trills    G/Gm dorian
+<br>
 jester             Bm
+<br>
 wild card          Am
+<br>
 supercloud         Em
+<br>
 grayscale          Em
+<br>
 shadow dance       Em phrygian
+<br>
 sillyclone         C
+<br>
 little haze        E dorian
+<br>
 long way down      Dm
+<br>
+<br>
+<br>
+<br>
 
 
 
 
+<br>
 Psalm 23
+<br>
 Luther Bibel 1545
+<br>
 23 (Ein Psalm Davids.)
 
+<br>
+<br>
 1 Der HERR ist mein Hirte; mir wird nichts
+<br>
 mangeln.
+<br>
 
+<br>
+<br>
 2 Er weidet mich auf grüner Aue und führet
+<br>
 mich zum frischen Wasser.
+<br>
 
+<br>
 3 Er erquicket meine Seele; er führet mich
+<br>
 auf rechter Straße um seines Namens willen.
+<br>
 
+<br>
 4 Und ob ich schon wanderte im finstern Tal,
+<br>
 fürchte ich kein Unglück; denn du bist bei
+<br>
 mir, dein Stecken und dein Stab trösten
+<br>
 mich.
+<br>
 
+<br>
 5 Du bereitest vor mir einen Tisch im
+<br>
 Angesicht meiner Feinde. Du salbest mein
+<br>
 Haupt mit Öl und schenkest mir voll ein.
+<br>
 
+<br>
 6 Gutes und Barmherzigkeit werden mir
+<br>
 folgen mein Leben lang, und ich werde
+<br>
 bleiben im Hause des HERRN immerdar.
+<br>
+<br>
+<br>
 
 
 
 
 ----------
+<br>
 
+<br>
+<br>
 
 
 
 ----------
 
+<br>
+<br>
 
 circles chorus vox harmonies variations pdf in my google drive:
+<br>
 https://drive.google.com/file/d/1xjQqXZ8VYnSm_CieD-dobzUaYTFcc7P4/view?usp=drivesdk
+<br>
+<br>
 
 
 
 ----------
+<br>
 
 JUNE 26 SET:
+<br>
+<br>
 
 blueing at the gills           F#m?
+<br>
 similar shirt                  A
+<br>
 halfstep trills                G
+<br>
 the jester                     Bm phrygian
+<br>
 wild card                      Am
+<br>
 supercloud                     Am
+<br>
 grayscale                      Em dorian
+<br>
 ........break/skit
+<br>
 we can move heaven and earth   A?
+<br>
 glass castles                  E?
+<br>
 shadowdance                    Em phrygian
+<br>
 sillyclone                     C
+<br>
 ........break/skit
+<br>
 little haze                    E mixolydian
+<br>
 long way down                  Dm dorian
+<br>
 last sail                      A, F#m dorian
+<br>
 
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+you are beautiful
 		<script>
 	let songsList = [
 ["blueing at the gills",          "F#m?"],
