--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ div#charts-list-div {
 		</style></head><body>
 
 <div id="charts-list-div">
+	<a href="band-calendar.txt">calendar</a>
 Here I will add charts for all songs:
 <ul>
   <li><a href="charts/halfstep-trills.html">halfstep trills</a></li>
@@ -24,6 +25,24 @@ Here I will add charts for all songs:
   <li><a href="charts/halfstep-trills.html">halfstep trills</a></li>
 </ul>
 </div>
+
+July 17th Shedfest, stanwood 
+July 30th BRODIEnation, Carnation
+July 31st Southside social, Concrete 
+
+Jeremy playing with himself
+*Aug 21st private granite falls 
+
+Aug 28th.    beerfest, outdoor 
+
+Sept 10thJam revival Carnation 7.30-8.30pm
+Sept 11th fisherman's village 
+
+Oct 9th lucky dime everett
+October 30th ZOMBIE BALL, mirkwood, Arlington
+
+
+the low hums 10/9
 
 _________________________setlist for 7/30 and 7/31<br>
 Moonchild*<br>
@@ -62,11 +81,11 @@ Luther Bibel 1545<br>
 23 (Ein Psalm Davids.)
 
 <br><br>
-1 Der HERR ist mein Hirte; mir wird nichts<br>
+1 Der HERR ist mein Hirte; mir wird <br>nichts
 mangeln.<br>
 
 <br>
-2 Er weidet mich auf grüner Aue und führet<br>
+2 Er weidet mich auf grüner Aue und <br>führet
 mich zum frischen Wasser.<br>
 
 <br>
