--- a/index.html
+++ b/index.html
@@ -26,23 +26,19 @@ Here I will add charts for all songs:
 </ul>
 </div>
 
-July 17th Shedfest, stanwood 
-July 30th BRODIEnation, Carnation
-July 31st Southside social, Concrete 
-
-Jeremy playing with himself
-*Aug 21st private granite falls 
-
-Aug 28th.    beerfest, outdoor 
-
-Sept 10thJam revival Carnation 7.30-8.30pm
-Sept 11th fisherman's village 
-
-Oct 9th lucky dime everett
-October 30th ZOMBIE BALL, mirkwood, Arlington
 
 
-the low hums 10/9
+October 30th ZOMBIE BALL, mirkwood, Arlington<br>
+Oct 9th lucky dime everett w/ "the low hums"<br>
+Sept 11th fisherman's village<br>
+Sept 10thJam revival Carnation 7.30-8.30pm<br>
+Aug 28th.    beerfest, outdoor<br>
+  Jeremy playing with himself<br>
+  *Aug 21st private granite falls<br>
+July 31st Southside social, Concrete<br>
+July 30th BRODIEnation, Carnation<br>
+July 17th Shedfest, stanwood<br><br><br>
+
 
 _________________________setlist for 7/30 and 7/31<br>
 Moonchild*<br>
