--- a/index.html
+++ b/index.html
@@ -29,18 +29,22 @@ Here I will add charts for all songs:
 
 
 October 30th ZOMBIE BALL, mirkwood, Arlington<br>
-Oct 9th lucky dime everett w/ "the low hums"<br>
+Oct 9th lucky dime everett w/ "the low hums"<br><br>
+
 Sept 11th fisherman's village<br>
-Sept 10thJam revival Carnation 7.30-8.30pm<br>
+Sept 10thJam revival Carnation 7.30-8.30pm<br><br>
+
 Aug 28th.    beerfest, outdoor<br>
   Jeremy playing with himself<br>
-  *Aug 21st private granite falls<br>
+  *Aug 21st private granite falls<br><br>
+
 July 31st Southside social, Concrete<br>
 July 30th BRODIEnation, Carnation<br>
-July 17th Shedfest, stanwood<br><br><br>
+July 17th Shedfest, stanwood<br>
 
 
-_________________________setlist for 7/30 and 7/31<br>
+<br><br>
+__setlist for 7/30 and 7/31<br>
 Moonchild*<br>
 Halfstep trills<br>
 The jester<br>
@@ -56,10 +60,11 @@ Keep me Hangin On*<br>
 Little haze<br>
 <br>
 Long way down<br>
-________________________________<br><br><br>
 
 
-_______________________________setlist for shedfest<br>
+
+<br><br><br>
+__setlist for shedfest<br>
 similar shirt      A<br>
 halfstep trills    G/Gm dorian<br>
 jester             Bm<br>
@@ -77,27 +82,30 @@ Luther Bibel 1545<br>
 23 (Ein Psalm Davids.)
 
 <br><br>
-1 Der HERR ist mein Hirte; mir wird <br>nichts
-mangeln.<br>
+1 Der HERR ist mein Hirte; mir wird<br>
+nichts mangeln.<br>
 
 <br>
-2 Er weidet mich auf grüner Aue und <br>führet
-mich zum frischen Wasser.<br>
+2 Er weidet mich auf grüner Aue und<br>
+führet mich zum frischen Wasser.<br>
 
 <br>
-3 Er erquicket meine Seele; er führet mich<br>
-auf rechter Straße um seines Namens willen.<br>
+3 Er erquicket meine Seele; er<br>
+führet mich auf rechter Straße um<br>
+seines Namens willen.<br>
 
 <br>
-4 Und ob ich schon wanderte im finstern Tal,<br>
-fürchte ich kein Unglück; denn du bist bei<br>
-mir, dein Stecken und dein Stab trösten<br>
+4 Und ob ich schon wanderte im<br>
+finstern Tal, fürchte ich kein<br>
+Unglück; denn du bist bei mir,<br>
+dein Stecken und dein Stab trösten<br>
 mich.<br>
 
 <br>
 5 Du bereitest vor mir einen Tisch im<br>
-Angesicht meiner Feinde. Du salbest mein<br>
-Haupt mit Öl und schenkest mir voll ein.<br>
+Angesicht meiner Feinde. Du salbest<br>
+mein Haupt mit Öl und schenkest mir<br>
+voll ein.<br>
 
 <br>
 6 Gutes und Barmherzigkeit werden mir<br>
@@ -107,14 +115,10 @@ bleiben im Hause des HERRN immerdar.<br>
 <br>
 ________________<br><br>
 
-circles chorus vox harmonies variations pdf in my google drive:
-<br>
-https://drive.google.com/file/d/1xjQqXZ8VYnSm_CieD-dobzUaYTFcc7P4/view?usp=drivesdk
-<br>
-<br>
+<a href="https://drive.google.com/file/d/1xjQqXZ8VYnSm_CieD-dobzUaYTFcc7P4/view?usp=drivesdk">
+circles chorus vox harmonies variations pdf in my google drive:</a>
 
-
-
+<br><br><br>
 ________________<br>
 
 <br>
