--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@ Here I will add charts for all songs:
   <li><a href="charts/halfstep-trills.html">halfstep trills</a></li>
   <li><a href="charts/halfstep-trills.html">halfstep trills</a></li>
   <li><a href="charts/halfstep-trills.html">halfstep trills</a></li>
-</ul>
+</ul><br>
+<a href="steel-beans.txt">steel-beans.txt</a>
 </div>
 
 
