--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@ Here I will add charts for all songs:
 <a href="steel-beans.txt">steel-beans.txt</a>
 </div>
 
+<p>Jeremy out of town sunday morning to thursday
+morning. 7/25 - 7/29</p><hr>
 
-
+<h3>calendar</h3>
 October 30th ZOMBIE BALL, mirkwood, Arlington<br>
 Oct 9th lucky dime everett w/ "the low hums"<br><br>
 
