--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@ div#charts-list-div {
   right: 0px;
 
 }
+div.accent-div {
+  background-color: #eae3de;
+  padding: 8px;
+  border-radius: 5px;
+
+}
 		</style></head><body>
 
 <div id="charts-list-div">
