--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ Here I will add charts for all songs:
 <p>Jeremy out of town sunday morning to thursday
 morning. 7/25 - 7/29</p><hr>
 
+<div class="accent-div">
 <h3>calendar</h3>
 October 30th ZOMBIE BALL, mirkwood, Arlington<br>
 Oct 9th lucky dime everett w/ "the low hums"<br><br>
@@ -51,6 +52,7 @@ July 31st Southside social, Concrete<br>
 July 30th BRODIEnation, Carnation<br>
 July 17th Shedfest, stanwood<br>
 
+</div><!-- div.accent-div -->
 
 <br><br>
 __setlist for 7/30 and 7/31<br>
