--- a/index.html
+++ b/index.html
@@ -5,15 +5,20 @@
   background-color: #fafbfe;
   font-family: monospace;
 }
-div#charts-list-div { 
+div.container {
+  width: 100%;
+  background: lightgray;
+  display: grid;
+  grid-template-columns: 1fr 100px;
+  grid-gap: 5px 3px;/* vertical horizontal */
+}
+div.grid-div { 
   color: #173794;
   background-color: #eaebee;
   padding: 8px;
-  position: absolute;
-  top: 0px;
-  right: 0px;
-
 }
+
+/* non-grid */
 div.accent-div {
   background-color: #eae3de;
   padding: 8px;
@@ -21,17 +26,8 @@ div.accent-div {
 
 }
 		</style></head><body>
-
-<div id="charts-list-div">
-	<a href="band-calendar.txt">calendar</a>
-Here I will add charts for all songs:
-<ul>
-  <li><a href="charts/halfstep-trills.html">halfstep trills</a></li>
-  <li><a href="charts/halfstep-trills.html">halfstep trills</a></li>
-  <li><a href="charts/halfstep-trills.html">halfstep trills</a></li>
-</ul><br>
-<a href="steel-beans.txt">steel-beans.txt</a>
-</div>
+			<div class="container">
+<div class="grid-div" id="main-div">
 
 <p>Jeremy out of town sunday morning to thursday
 morning. 7/25 - 7/29</p><hr>
@@ -163,6 +159,37 @@ last sail                      A, F#m dorian<br>
 <br>
 you are beautiful
 
+        </div><!-- div.grid-div#main-div -->
+        
+
+
+        <div class="grid-div" id="charts-div">
+    <a href="band-calendar.txt">calendar</a>
+Here I will add charts for all songs:
+<ul>
+  <li><a href="charts/halfstep-trills.html">
+    halfstep trills</a></li>
+  <li><a href="charts/last-sail.html">
+    last sail</a></li>
+  <li><a href="charts/keep-me-hangin-on.html">
+    keep me hangin on</a></li>
+</ul>
+<br>
+<a href="steel-beans.txt">steel-beans.txt</a>
+
+
+
+
+      </div><!-- div.grid-div#charts-div -->
+            </div><!-- div.container -->
+
+
+
+
+
+
+
+
 
 
 
@@ -170,13 +197,6 @@ you are beautiful
 
 
 <script src="all-songs.js"></script>
-
-
-
-
-
-
-
 </body></html>
 
 
