--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@ div.accent-div {
 			<div class="container">
 <div class="grid-div" id="main-div">
 
+<canvas id="canvas1" width="400px" height="250px"></canvas>
+
 <p>Jeremy out of town sunday morning to thursday
 morning. 7/25 - 7/29</p><hr>
 
@@ -196,6 +198,8 @@ Here I will add charts for all songs:
 
 
 
+<script src="all-songs.js"></script>
+<script src="draw-to-canvas.js"></script>
 <script src="all-songs.js"></script>
 </body></html>
 
