--- a/index.html
+++ b/index.html
@@ -13,35 +13,60 @@
 		multiple canvases in one page.
 	-->
 
-<canvas id="canvas1" width="400px" height="250px" style="border:1px solid #c3c3c3;"></canvas>
+<canvas id="canvas1" width="100%" height="250px" style="border:1px solid #c3c3c3;"></canvas>
 
 <p>Jeremy out of town sunday morning to thursday
 morning. 7/25 - 7/29</p><hr>
 
-    <div class="accent-div">
-  <h3>calendar in reverse chronological order</h3>
-October 30th ZOMBIE BALL, mirkwood, Arlington<br>
-Oct 9th lucky dime everett w/ "the low hums"<br><br>
+      <div class="accent-div">
+    <h3>calendar in reverse chronological order</h3>
+  <div class="band-calendar">
+<div>October 30th</div>
+<div>ZOMBIE BALL</div>
+<div>mirkwood</div>
+<div>Arlington</div>
 
-Sept 11th fisherman's village<br>
-Sept 10th Jam revival Carnation 7.30-8.30pm<br><br>
+<div>Oct 9th</div>
+<div></div>
+<div>lucky dime</div>
+<div>everett w/ "the low hums"</div>
 
-Aug 28th.    beerfest, outdoor<br>
-  Jeremy playing with himself<br>
-  *Aug 21st private granite falls<br><br>
+<div>Sept 11th</div>
+<div>fisherman's village</div>
+<div></div>
+<div>everett</div>
 
-July 31st Southside social, Concrete<br>
+<div>Sept 10th</div>
+<div>Jam revival</div>
+<div>7.30-8.30pm</div>
+<div>Carnation</div>
+
+<div>Aug 28th</div>
+<div>beerfest, outdoor</div>
+<div></div>
+<div></div>
+
+<div>*Aug 21st private</div>
+<div></div>
+<div>Jeremy playing with himself</div>
+<div>granite falls</div>
+   
+
+<div>July 31st</div>
+<div>Southside social
   <ul>
     <li>jeremy arrive 3pm</li>
     <li>band show up by 7pm</li>
   </ul>
-July 30th BRODIEnation, Carnation<br>
+Concrete
+July 30th BRODIEnation, Carnation
   <ul>
     <li>jeremy arrive 3pm</li>
     <li>band show up by 7pm</li>
   </ul>
-July 17th Shedfest, stanwood<br>
+July 17th Shedfest, stanwood
 
+  </div><!-- div.band-calendar -->
     </div><!-- div.accent-div -->
 
 <br><br>
