--- a/index.html
+++ b/index.html
@@ -22,71 +22,60 @@ morning. 7/25 - 7/29</p><hr>
     <h3>calendar in reverse chronological order</h3>
   <div class="band-calendar">
 <div>October 30th</div>
-<div>ZOMBIE BALL</div>
-<div>mirkwood</div>
-<div>Arlington</div>
+<div>ZOMBIE BALL, mirkwood, Arlington</div>
 
 <div>Oct 9th</div>
-<div></div>
-<div>lucky dime</div>
-<div>everett w/ "the low hums"</div>
+<div>lucky dime, everett, w/ "the low hums"</div>
 
 <div>Sept 11th</div>
-<div>fisherman's village</div>
-<div></div>
-<div>everett</div>
+<div>fisherman's village, everett</div>
 
 <div>Sept 10th</div>
-<div>Jam revival</div>
-<div>7.30-8.30pm</div>
-<div>Carnation</div>
+<div>Jam revival, 7.30-8.30pm, Carnation</div>
 
 <div>Aug 28th</div>
 <div>beerfest, outdoor</div>
-<div></div>
-<div></div>
 
-<div>*Aug 21st private</div>
-<div></div>
-<div>Jeremy playing with himself</div>
-<div>granite falls</div>
+<div>*Aug 21st (private)</div>
+<div>Jeremy playing with himself, granite falls</div>
    
 
 <div>July 31st</div>
-<div>Southside social
-  <ul>
+<div>Southside social, Concrete<ul>
     <li>jeremy arrive 3pm</li>
     <li>band show up by 7pm</li>
-  </ul>
-Concrete
-July 30th BRODIEnation, Carnation
-  <ul>
+  </ul></div>
+
+<div>July 30th</div>
+<div>BRODIEnation, Carnation<ul>
     <li>jeremy arrive 3pm</li>
     <li>band show up by 7pm</li>
-  </ul>
-July 17th Shedfest, stanwood
+  </ul></div>
+
+<div>July 17th</div>
+<div>Shedfest, stanwood</div>
 
   </div><!-- div.band-calendar -->
     </div><!-- div.accent-div -->
 
-<br><br>
-__setlist for 7/30 and 7/31<br>
-Moonchild*<br>
-Halfstep trills<br>
-The jester<br>
-Wild card<br>
-Circles<br>
-Grayscale<br>
+    <div class="accent-div">
+<h3>__setlist for 7/30 and 7/31</h3>
+<ul><li>Moonchild*</li>
+<li>Halfstep trills</li>
+<li>The jester</li>
+<li>Wild card</li>
+<li>Circles</li>
+<li>Grayscale</li>
 <br>
-Glass castles<br>
-Shadow dance<br>
-Silly clone<br>
+<li>Glass castles</li>
+<li>Shadow dance</li>
+<li>Silly clone</li>
 <br>
-Keep me Hangin On*<br>
-Little haze<br>
+<li>Keep me Hangin On*</li>
+<li>Little haze</li>
 <br>
-Long way down<br>
-
+<li>Long way down</li></ul>
+    </div><!-- div.accent-div -->
 
 
 <br><br><br>
