--- a/index.html
+++ b/index.html
@@ -77,20 +77,20 @@ morning. 7/25 - 7/29</p><hr>
 <li>Long way down</li></ul>
     </div><!-- div.accent-div -->
 
-
-<br><br><br>
-__setlist for shedfest<br>
-similar shirt      A<br>
-halfstep trills    G/Gm dorian<br>
-jester             Bm<br>
-wild card          Am<br>
-supercloud         Em<br>
-grayscale          Em<br>
-shadow dance       Em phrygian<br>
-sillyclone         C<br>
-little haze        E dorian<br>
-long way down      Dm<br>
-<br><br><br>
+    <div class="accent-div">
+<h3>__setlist for shedfest</h3>
+<div class="set-list">
+<div>similar shirt    </div><div>A            </div>
+<div>halfstep trills  </div><div>G/Gm dorian  </div>
+<div>jester           </div><div>Bm           </div>
+<div>wild card        </div><div>Am           </div>
+<div>supercloud       </div><div>Em           </div>
+<div>grayscale        </div><div>Em           </div>
+<div>shadow dance     </div><div>Em phrygian  </div>
+<div>sillyclone       </div><div>C            </div>
+<div>little haze      </div><div>E dorian     </div>
+<div>long way down    </div><div>Dm           </div>
+    </div><!-- div.accent-div -->
 
 Psalm 23<br>
 Luther Bibel 1545<br>
