--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@ morning. 7/25 - 7/29</p><hr>
 <div>sillyclone       </div><div>C            </div>
 <div>little haze      </div><div>E dorian     </div>
 <div>long way down    </div><div>Dm           </div>
-    </div><!-- div.accent-div -->
+</div><!-- div.set-list -->
+</div><!-- div.accent-div -->
 
 Psalm 23<br>
 Luther Bibel 1545<br>
