--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ morning. 7/25 - 7/29</p><hr>
     </div><!-- div.accent-div -->
 
     <div class="accent-div">
-<h3>__setlist for 7/30 and 7/31</h3>
+  <h3>__ old setlist for 7/30 and 7/31</h3>
 <ul><li>Moonchild*</li>
 <li>Halfstep trills</li>
 <li>The jester</li>
@@ -75,6 +75,48 @@ morning. 7/25 - 7/29</p><hr>
 <li>Little haze</li>
 <br>
 <li>Long way down</li></ul>
+
+  <h3>__ setlist as of 7/29/2021</h3>
+<div class="set-list">
+<ul><li>Moonchild*</li>
+<li>Halfstep trills</li>
+<li>The jester</li>
+<li>Wild card</li>
+<li>Circles</li>
+<li>Grayscale</li>
+<br>
+<li>Glass castles</li>
+<li>Shadow dance</li>
+<li>Silly clone</li>
+<br>
+<li>Keep me Hangin On*</li>
+<li>Little haze</li>
+<br>
+<li>Long way down</li></ul>
+
+  <div class="set-list">
+	  <div>1 similar</div><div></div>
+<div>2 halstep trills</div><div></div>
+<div>3 circles</div><div></div>
+<div>4 jester</div><div></div>
+<div>5 wildcard</div><div></div>
+<div>6 supercloud</div><div></div>
+<div>7 grayscale</div><div></div>
+<div>8 heaven (skit) we become dinosaurs</div><div></div>
+<div>9 glass castles</div><div></div>
+<div>10 shadow danve</div><div></div>
+<div>11 sillyclone</div><div></div>
+<div>12 keep me hangin</div><div></div>
+<div>13 little haze</div><div></div>
+<div>14 long way down</div><div></div>
+  </div>
+
+
+</div><!-- div.set-list -->
+
+
+
+
     </div><!-- div.accent-div -->
 
     <div class="accent-div">
@@ -173,7 +215,7 @@ you are beautiful
 
 
         <div class="grid-div" id="charts-div">
-    <a href="band-calendar.txt">calendar</a>
+
 Here I will add charts for all songs:
 <ul>
   <li><a href="charts/halfstep-trills.html">
@@ -183,8 +225,27 @@ Here I will add charts for all songs:
   <li><a href="charts/keep-me-hangin-on.html">
     keep me hangin on</a></li>
 </ul>
-<br>
-<a href="steel-beans.txt">steel-beans.txt</a>
+
+<div class="band-member-song-mastery-chart">
+<div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+
+<div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+
+<div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+
+<div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+
+<div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+
+<div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+
+<div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+
+<div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+
+
+
+</div><!-- div.band-member-song-mastery-chart -->
 
 
 
