--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ morning. 7/25 - 7/29</p><hr>
 <li>Long way down</li></ul>
 
   <div class="set-list">
-	  <div>1 similar</div><div></div>
+<div>1 similar</div><div></div>
 <div>2 halstep trills</div><div></div>
 <div>3 circles</div><div></div>
 <div>4 jester</div><div></div>
@@ -226,26 +226,25 @@ Here I will add charts for all songs:
     keep me hangin on</a></li>
 </ul>
 
-<div class="band-member-song-mastery-chart">
-<div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+  <div class="band-member-song-mastery-chart">
+	  <!-- title key jeremy aaron sean ty -->
+<div>title</div><div>key</div><div>jeremy</div><div>aaron</div><div>sean</div><div>ty</div><div></div>
+
+<div>halfstep trills</div><div>G</div><div>A+</div><div>A+</div><div>A+</div><div>A+</div><div>A+</div>
+
+<div>Similar Shirt</div><div>A</div><div></div><div></div><div></div><div></div><div></div>
+
+<div>Supercloud</div><div></div><div></div><div></div><div></div><div></div><div></div>
+
+<div>Little Haze</div><div></div><div></div><div></div><div></div><div></div><div></div>
+
+<div>Keep Me Hangin On</div><div></div><div></div><div></div><div></div><div></div><div></div>
 
 <div></div><div></div><div></div><div></div><div></div><div></div><div></div>
 
 <div></div><div></div><div></div><div></div><div></div><div></div><div></div>
 
-<div></div><div></div><div></div><div></div><div></div><div></div><div></div>
-
-<div></div><div></div><div></div><div></div><div></div><div></div><div></div>
-
-<div></div><div></div><div></div><div></div><div></div><div></div><div></div>
-
-<div></div><div></div><div></div><div></div><div></div><div></div><div></div>
-
-<div></div><div></div><div></div><div></div><div></div><div></div><div></div>
-
-
-
-</div><!-- div.band-member-song-mastery-chart -->
+  </div><!-- div.band-member-song-mastery-chart -->
 
 
 
