--- a/index.html
+++ b/index.html
@@ -77,23 +77,6 @@ morning. 7/25 - 7/29</p><hr>
 <li>Long way down</li></ul>
 
   <h3>__ setlist as of 7/29/2021</h3>
-<div class="set-list">
-<ul><li>Moonchild*</li>
-<li>Halfstep trills</li>
-<li>The jester</li>
-<li>Wild card</li>
-<li>Circles</li>
-<li>Grayscale</li>
-<br>
-<li>Glass castles</li>
-<li>Shadow dance</li>
-<li>Silly clone</li>
-<br>
-<li>Keep me Hangin On*</li>
-<li>Little haze</li>
-<br>
-<li>Long way down</li></ul>
-
   <div class="set-list">
 <div>1 similar</div><div></div>
 <div>2 halstep trills</div><div></div>
@@ -227,22 +210,49 @@ Here I will add charts for all songs:
 </ul>
 
   <div class="band-member-song-mastery-chart">
+	  <h3>This is the Band-Member-Song-Mastery-Chart
+	where we each give ourself a grade on our mastery
+	of every song and then we grade the whole band on
+	the band's mastery of each song.</h3>
 	  <!-- title key jeremy aaron sean ty -->
-<div>title</div><div>key</div><div>jeremy</div><div>aaron</div><div>sean</div><div>ty</div><div></div>
+<div>title</div>          <div>key</div><div>band</div><div>jeremy</div><div>aaron</div><div>sean</div><div>ty</div>
+<div>halfstep trills</div><div>G</div>  <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+<div>Similar Shirt</div>  <div>A</div>  <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+<div>Supercloud</div>     <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+<div>Little Haze</div>    <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+<div>Keep Me Hangin</div> <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+<div>Circles</div>        <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+<div>Jester</div>         <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+<div>Grayscale</div>      <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+<div>Heaven and</div>     <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+<div>Glass Castles</div>  <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+<div>Shadowdance</div>    <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+<div>Sillyclone</div>     <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+<div>Long Way Down</div>  <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+<div>Jester</div>         <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+<div>Jester</div>         <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+<div>Jester</div>         <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
 
-<div>halfstep trills</div><div>G</div><div>A+</div><div>A+</div><div>A+</div><div>A+</div><div>A+</div>
 
-<div>Similar Shirt</div><div>A</div><div></div><div></div><div></div><div></div><div></div>
 
-<div>Supercloud</div><div></div><div></div><div></div><div></div><div></div><div></div>
+<!--
+<div>1 similar</div><div></div>
+<div>2 halstep trills</div><div></div>
+<div>3 circles</div><div></div>
+<div>4 jester</div><div></div>
+<div>5 wildcard</div><div></div>
+<div>6 supercloud</div><div></div>
+<div>7 grayscale</div><div></div>
+<div>8 heaven (skit) we become dinosaurs</div><div></div>
+<div>9 glass castles</div><div></div>
+<div>10 shadow danve</div><div></div>
+<div>11 sillyclone</div><div></div>
+<div>12 keep me hangin</div><div></div>
+<div>13 little haze</div><div></div>
+<div>14 long way down</div><div></div>
 
-<div>Little Haze</div><div></div><div></div><div></div><div></div><div></div><div></div>
+-->
 
-<div>Keep Me Hangin On</div><div></div><div></div><div></div><div></div><div></div><div></div>
-
-<div></div><div></div><div></div><div></div><div></div><div></div><div></div>
-
-<div></div><div></div><div></div><div></div><div></div><div></div><div></div>
 
   </div><!-- div.band-member-song-mastery-chart -->
 
