--- a/index.html
+++ b/index.html
@@ -5,18 +5,46 @@
 
 	</head><body>
 			<div class="container">
-<div id="left-column">
+
 
 	<!--
-		canvas1 similar shirt riffage
-		for proof of concept of doing
-		multiple canvases in one page.
-	-->
+		canvas1 similar shirt -->
 
 <canvas id="canvas1" width="100%" height="250px" style="border:1px solid #c3c3c3;"></canvas>
 <!-- /canvas for similar shirt riff -->
 
+<h3>all de songs we knowes:</h3>
+<ul>
+	<li>halfstep trills</li>
+	<li>supercloud</li>
+	<li>little haze</li>
+	<li>keep me hangin on</li>
+	<li>shadowdance 9003</li>
+	<li>the jester</li>
+	<li>wildcard</li>
+	<li>sillyclone valley</li>
+	<li>circles</li>
+	<li>similar shirt</li>
+	<li>who set the world to grayscale?</li>
+	<li>we can move heaven and earth</li>
+	<li>glass castles</li>
+	<li>long way down</li>
+	<li><h3>songz we gon' learn:</h3></li>
+	<li>idk</li>
+	<li>idk</li>
+	<li>idk</li>
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
 
+
+</ul>
   <h3>__ setlist for 7/30 and 7/31 as of 7/29/2021</h3>
   <div class="set-list">
 <div>1 similar</div>                          <div></div>
@@ -144,13 +172,8 @@ last sail                      A, F#m dorian<br>
 <br>
 <br>
 <br>
-you are beautiful
 
-        </div><!-- div#left-column -->
         
-
-
-        <div id="right-column">
 		<h3>band claendar</h3>
 <div class="band-calendar">
 <div>October 30th</div>
@@ -202,7 +225,7 @@ you are beautiful
 
 
 
-      </div><!-- div#right-column -->
+      
             </div><!-- div.container -->
 
 
